--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       const chatBox = document.getElementById("chatBox");
       chatBox.innerHTML += `<p class="user">You: ${input}</p>`;
 
-      fetch("/ask", {
+      fetch("https://school-35l6.vercel.app/ask", {
         method: "POST",
         headers: { "Content-Type": "application/json" },
         body: JSON.stringify({ message: input })
